--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,47 +2,51 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px auto 80px;
 }
 
 .form__title {
   font-size: 24px;
   font-weight: 900;
   line-height: 1.22;
-  margin-bottom: 50px;
+  margin: 50px auto;
+
 }
 
 .form__container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+}
+
+.form__label {
+  color: #341d08;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .form__input {
   min-width: 358px;
-  min-height: 27px;
-  border: none;
+  min-height: 50px;
+  border: solid 1px #341d08;
+  border-radius: 5px;
   font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   line-height: 1.21;
   font-weight: 400;
-  padding: 0;
-  border-bottom: 1px solid #ccc;
+  padding: 10px;
   box-sizing: border-box;
-  background-color: #2F2F2F;
-  margin-bottom: 30px;
-  color: #fff;
-}
-
-.form__input:last-of-type {
-  margin-bottom: 216px;
+  background-color: #f2dfd3;
+  margin: 15px auto 30px;
+  color: #341d08;
 }
 
 .form__button-submit {
   min-width: 358px;
   min-height: 50px;
-  background-color: #fff;
-  color: #000;
+  background-color: #341d08;
+  color: #f2dfd3;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.21;
@@ -50,26 +54,29 @@
   justify-content: center;
   align-items: center;
   border: none;
-  border-radius: 2px;
+  border-radius: 5px;
   padding: 0;
-  margin-bottom: 15px;
+  margin: 150px auto 50px;
+  
 }
 
 .form__input:focus {
-  outline: 1px solid #073042;
+  outline: 1px solid #341d08;
 }
 
 .form__input::placeholder {
-  color: #8B8B8B;
+  
+  color: #d3a27f;
 }
 
 .form__input:invalid {
-  color: #EE3465;
+  color: #f00;
+  
 }
 
 /***************************************************/
 .form__input-error {
-  color: #EE3465;
+  color: #f00;
   padding: 0;
   margin: 0;
   min-width: 396px;
