--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@
   margin: 0 auto;
 }
 
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .page__container {
   padding: 0 70px;
 }
