--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,38 +1,125 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.form__title {
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 1.22;
+  margin: 50px auto;
+
+}
+
+.form__container {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form__label {
+  color: #341d08;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-bottom: 35px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.form__input {
+  min-width: 358px;
+  min-height: 50px;
+  border: solid 1px #341d08;
+  border-radius: 5px;
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.21;
+  font-weight: 400;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: #f2dfd3;
+  margin-top: 15px;
+  color: #341d08;
+}
+
+.form__button-submit {
+  min-width: 358px;
+  min-height: 50px;
+  background-color: #341d08;
+  color: #f2dfd3;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.21;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #d3a27f;
+  border-radius: 5px;
+  padding: 0;
+  margin: 150px auto 50px;
+  
+}
+
+.form__input:focus {
+  outline: 1px solid #341d08;
+}
+
+.form__input::placeholder {
+  
+  color: #d3a27f;
+}
+
+.form__input:invalid {
+  color: #f00;
+  
+}
+
+.form__input-error {
+  color: #f00;
+  padding: 0;
+  margin: 0;
+  font-size: 12px;
+  min-width: 396px;
+  position: absolute;
+  left: 0;
+  top: calc(100% + 5px);
+}
+
+.button__disabled {
+  color: #d3a27f;
+  background-color: #f2dfd3;
+}
+
+
+
+@media (max-width: 620px) {
+
+  .form {
+    min-width: 238px;
+    font-size: 18px;
+    margin: 0 0 40px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .form__title {
+    font-size: 24px;
+    line-height: 1.21;
+    margin-bottom: 40px;
   }
+
+  .form__input {
+    margin-bottom: 30px;
+  }
+
+  .form__input:last-of-type {
+    margin-bottom: 173px;
+  }
+
+  .form__button-submit {
+    min-width: 260px;
+    min-height: 46px;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
 }
