--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,7 +19,8 @@
 @media (max-width: 890px) {
 
   .footer {
-    max-width: 80%;
+    
+    padding: 0 30px;
   }
 
 }
@@ -27,12 +28,13 @@
 @media (max-width: 620px) {
 
   .footer__copyright {
-    margin-bottom: 36px;
-    font-size: 14px;
+    margin-bottom: 10px;
+    font-size: 10px;
   }
 
   .footer {
-    max-width: 282px;
+    justify-content: center;
+    padding: 0 15px;
   }
 
 }
