--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,11 @@
 
 .header {
-  min-height: 74px;
+  min-height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 70px;
   border-bottom: solid 1px #341d08;
+  padding: 0 30px;
 }
 
 .header__title {
@@ -13,6 +13,7 @@
   line-height: 1.16;
   font-weight: 400;
   letter-spacing: -.04em;
+  margin: 0;
 }
 
 .header__button {
@@ -29,19 +30,15 @@
 }
 
 
-@media (max-width: 800px) {
+@media (max-width: 550px) {
 
   .header {
-    padding: 0 30px;
+    min-height: 50px;
+    padding: 0 15px;
   }
 
-}
-
-@media (max-width: 500px) {
-
-  .header {
-    padding: 0 15px;
-    column-gap: 14px;
+  .header__title {
+    font-size: 40px;
   }
 
   .header__button {
@@ -50,3 +47,4 @@
   }
 
 }
+
