--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -1,6 +1,6 @@
 .not-found {
-  background-color: #202020;
-  color: #fff;
+  background-color: #f2dfd3;
+  color: #341d08;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,18 +24,29 @@
 }
 
 .not-found__button {
+  width: 80px;
+  height: 80px;
   font-size: 14px;
   line-height: 1.21;
   font-weight: 400;
   
-border: none;
-background-color: rgba(0, 0, 0, 0);
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
 
-  color: #4285F4;
+  color: #964b00;
   justify-self: flex-end;
   position: absolute;
   bottom: 60px;
 }
+
+.not-found__button:hover {
+  width: 80px;
+  height: 80px;
+  background-color: #d3a27f;
+  border-radius: 50px;
+  
+}
+
 
 @media (max-width: 770px) {
 
