--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -9,187 +9,13 @@
   justify-content: center;
   align-items: center;
   
-   visibility: hidden;
-   opacity: 0;
-   transition: visibility 0.5s, opacity 0.5s ease;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s ease;
+  overflow: scroll;
 }
 
 .popup_is-opened {
   visibility: visible;
   opacity: 1;  
-}
-
-.popup__container {
-  padding: 30px 30px;
-  border: 2px solid #341d08;
-  border-radius: 15px;
-  background-color: #f2dfd3;
-  box-shadow: 5px 5px 15px #341d08;
-  position: relative;
-}
-
-.popup__button-close {
-  border: none;
-  position: absolute;
-  padding: 15px;
-  background-color: rgba(0, 0, 0, .0);
-  background-image: url("../../images/plus.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  transform: rotate(-45deg);
-  background-size: contain;
-}
-
-.popup__button-close_type_delivery {
-  right: -30px;
-  top: -30px;
-}
-
-.popup__form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-}
-
-.popup__title {
-  min-width: 358px;
-  font-size: 24px;
-  font-weight: 900;
-  line-height: 1.21;
-  margin: 34px 0 54px;
-  color: #341d08;
-}
-
-.popup__form-field {
-  margin-bottom: 30px;
-  position: relative;
-  font-size: 12px;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 35px;
-  color: #341d08;
-}
-
-.popup__form-field:last-of-type {
-  margin-bottom: 48px;
-}
-
-.popup__input {
-  min-width: 358px;
-  min-height: 40px;
-  border: 1px solid #341d08;
-  border-radius: 5px;
-  font-family: 'Inter', Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.21;
-  font-weight: 400;
-  padding: 0;
-  color: #341d08;
-  
-}
-
-.popup__input-error {
-  color: #ff0000;
-  font-size: 12px;
-  line-height: 1.21;
-  padding: 0;
-  margin: 0;
-  min-width: 358px;
-  position: absolute;
-  left: 0;
-  top: calc(100% + 5px);
-}
-
-.popup__button-submit {
-  min-width: 358px;
-  min-height: 50px;
-  background-color: #341d08;
-  color: #f2dfd3;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.21;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #d3a27f;
-  border-radius: 5px;
-  padding: 0;
-  margin-bottom: 36px;
-}
-
-.button__disabled {
-  color: #d3a27f;
-  background-color: #f2dfd3;
-}
-
-@media (max-width: 620px) {
-
-  .popup__button-submit {
-    min-width: 238px;
-    min-height: 46px;
-    font-size: 14px;
-    margin-bottom: 25px;
-  }
-
-}
-
-@media (max-width: 620px) {
-
-  .popup__input-error {
-    min-width: 238px;
-  }
-}
-
-
-
-@media (max-width: 620px) {
-
-  .popup__input {
-    min-width: 238px;
-  }
-  
-}
-
-@media (max-width: 620px) {
-  
-  .popup__form-field:last-of-type {
-    margin-bottom: 45px;
-  }
- 
-}
-
-@media (max-width: 620px) {
-
-  .popup__title {
-    min-width: 238px;
-    font-size: 18px;
-    margin: 25px 0 75px;
-  }
-}
-
-
-
-@media (max-width: 620px) {
-
-  .popup__button-close_type_profile {
-    left: 260px;
-    bottom: 330px;
-  }
-  
-}
-
-@media (max-width: 620px) {
-  
-  .popup__button-close {
-    padding: 10px;
-  }
-  
-}
-
-@media (max-width: 620px) {
-
-  .popup__container_type_info-tooltip {
-    padding: 50px 0;
-  }
 }
