--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -10,7 +10,7 @@
 .map__plan {
   max-width: 100%;
   max-height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
 
